ingresscontrollers/contour/acme-blog-ingressroute.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: acme-blog-ingress
  labels:
    app: acme-blog
spec:
  virtualhost:
    fqdn: www.acme.com
  routes:
    - match: /blog
      prefixRewrite: "/"
      services:
        - name: acme-blog
          port: 80
