ingresscontrollers/contour/acme-website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-website-ingress
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: www.acme.com
    http:
      paths:
      - path: /
        backend:
          serviceName: acme-website
          servicePort: 80
